Zenlytic data model update

--- a/views/people_pulse_sales_pipeline_view.yml
+++ b/views/people_pulse_sales_pipeline_view.yml
@@ -139,6 +139,7 @@ fields:
   - field: stage
     value: Closed Won
 
+
 - name: count_won_opportunities
   field_type: measure
   type: count
@@ -148,6 +149,7 @@ fields:
   filters:
   - field: stage
     value: Closed Won
+
 
 - name: count_lost_opportunities
   field_type: measure
@@ -159,8 +161,19 @@ fields:
   - field: stage
     value: Closed Lost
 
+
 - name: average_probability_to_close
   field_type: measure
   type: average
   description: The average probability to close across all opportunities.
   sql: ${probability_to_close}
+
+- name: egmkfnjpbhcjqqmfqqhojhmhqipumsauxmebkrzy
+  field_type: measure
+  type: average
+  label: Duplicate Average Deal Size
+  description: The average size of deals across all opportunities.
+  value_format_name: usd
+  sql: ${deal_size}
+  canon_date: sales_pipeline.expected_close_date
+  update_where_timeframe: true
