Zenlytic data model update

--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -4,7 +4,12 @@ type: model
 version: 1
 fiscal_month_offset: 1
 
-access_grants: []
+access_grants: 
+- name: pii_access
+  user_attribute: department
+  allowed_values:
+  - Executive
+  - Finance
 
 mappings:
   channel:
