--- a/views/people_pulse_employee_view.yml
+++ b/views/people_pulse_employee_view.yml
@@ -2,7 +2,7 @@ version: 1
 type: view
 name: employee
 model_name: peoplepulse_model
-description: Testing --TODO : NJM
+description: Testing
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_EMPLOYEE
 identifiers:
   - name: employee_id
