--- a/views/people_pulse_session_view.yml
+++ b/views/people_pulse_session_view.yml
@@ -3,7 +3,7 @@ type: view
 name: web_session
 description: >-
   The sessions are just for the marketing site, so we don't have information on
-  logged in users of the product
+  logged in users of the product NJM
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_SESSION
 default_date: timestamp
