--- a/views/people_pulse_session_view.yml
+++ b/views/people_pulse_session_view.yml
@@ -1,123 +1,109 @@
 version: 1
 type: view
 name: web_session
-description: The sessions are just for the marketing site, so we don't have information
-  on logged in users of the product
+description: >-
+  The sessions are just for the marketing site, so we don't have information on
+  logged in users of the product
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_SESSION
 default_date: timestamp
 identifiers:
-- name: session_id
-  type: primary
-  sql: ${session_id}
-- name: user_id
-  type: foreign
-  sql: ${user_id}
+  - name: session_id
+    type: primary
+    sql: ${session_id}
+  - name: user_id
+    type: foreign
+    sql: ${user_id}
 fields:
-- name: session_id
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."SESSION_ID"
-
-- name: user_id
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."USER_ID"
-
-- name: location
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."LOCATION"
-  searchable: false
-
-- name: bounce_rate
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."BOUNCE_RATE"
-
-- name: referrer
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."REFERRER"
-  searchable: false
-
-- name: session_duration
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."SESSION_DURATION"
-
-- name: page_views
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."PAGE_VIEWS"
-
-- name: device_type
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."DEVICE_TYPE"
-  searchable: true
-
-- name: browser
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."BROWSER"
-  searchable: true
-
-- name: timestamp
-  field_type: dimension_group
-  type: time
-  datatype: timestamp
-  timeframes:
-  - raw
-  - date
-  - day_of_year
-  - week
-  - week_of_year
-  - month
-  - month_of_year
-  - quarter
-  - fiscal_month
-  - fiscal_quarter
-  - fiscal_quarter_of_year
-  - fiscal_year
-  - year
-  sql: ${TABLE}."TIMESTAMP"
-
-- name: total_sessions
-  field_type: measure
-  type: count
-  description: The total number of sessions recorded
-  value_format_name: decimal_0
-  sql: ${session_id}
-
-- name: unique_users
-  field_type: measure
-  type: count_distinct
-  description: The count of unique users
-  value_format_name: decimal_0
-  sql: ${user_id}
-
-- name: average_bounce_rate
-  field_type: measure
-  type: average
-  description: The average bounce rate across all sessions
-  sql: ${bounce_rate}
-
-- name: average_session_duration
-  field_type: measure
-  type: average
-  description: The average duration of a session in seconds
-  sql: ${session_duration}
-
-- name: total_page_views
-  field_type: measure
-  type: sum
-  description: The total number of page views across all sessions
-  value_format_name: decimal_0
-  sql: ${page_views}
-
-- name: average_page_views_per_session
-  field_type: measure
-  type: average
-  description: The average number of page views per session
-  sql: ${page_views}
+  - name: session_id
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."SESSION_ID"
+  - name: user_id
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."USER_ID"
+  - name: location
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."LOCATION"
+    searchable: false
+  - name: bounce_rate
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."BOUNCE_RATE"
+  - name: referrer
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."REFERRER"
+    searchable: false
+  - name: session_duration
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."SESSION_DURATION"
+  - name: page_views
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."PAGE_VIEWS"
+  - name: device_type
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."DEVICE_TYPE"
+    searchable: true
+  - name: browser
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."BROWSER"
+    searchable: true
+  - name: timestamp
+    field_type: dimension_group
+    type: time
+    datatype: timestamp
+    timeframes:
+      - raw
+      - date
+      - day_of_year
+      - week
+      - week_of_year
+      - month
+      - month_of_year
+      - quarter
+      - fiscal_month
+      - fiscal_quarter
+      - fiscal_quarter_of_year
+      - fiscal_year
+      - year
+    sql: ${TABLE}."TIMESTAMP"
+  - name: total_sessions
+    field_type: measure
+    type: count
+    description: The total number of sessions recorded
+    value_format_name: decimal_0
+    sql: ${session_id}
+  - name: unique_users
+    field_type: measure
+    type: count_distinct
+    description: The count of unique users
+    value_format_name: decimal_0
+    sql: ${user_id}
+  - name: average_bounce_rate
+    field_type: measure
+    type: average
+    description: The average bounce rate across all sessions
+    sql: ${bounce_rate}
+  - name: average_session_duration
+    field_type: measure
+    type: average
+    description: The average duration of a session in seconds
+    sql: ${session_duration}
+  - name: total_page_views
+    field_type: measure
+    type: sum
+    description: The total number of page views across all sessions
+    value_format_name: decimal_0
+    sql: ${page_views}
+  - name: average_page_views_per_session
+    field_type: measure
+    type: average
+    description: The average number of page views per session
+    sql: ${page_views}
