Zenlytic data model update

--- a/models/base_model.yml
+++ b/models/base_model.yml
@@ -6,7 +6,7 @@ fiscal_month_offset: 1
 
 access_grants:
 - name: exec_only
-  user_attribute: department
+  user_attribute: My Thing Date
   allowed_values:
   - Executive
 
