--- a/views/people_pulse_employee_view.yml
+++ b/views/people_pulse_employee_view.yml
@@ -4,31 +4,38 @@ name: employee
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_EMPLOYEE
 identifiers:
-- name: employee_id
-  type: primary
-  sql: ${employee_id}
+  - name: employee_id
+    type: primary
+    sql: ${employee_id}
 fields:
-- name: employee_id
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."EMPLOYEE_ID"
+  - name: employee_id
+    field_type: dimension
+    type: number
+    description: ''
+    hidden: false
+    label: Employee Id NJM
+    primary_key: false
+    searchable: false
+    sql: ${TABLE}."EMPLOYEE_ID"
+    synonyms: []
+    tiers: null
 
-- name: employee_name
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."NAME"
-  searchable: false
+  - name: employee_name
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."NAME"
+    searchable: false
 
-- name: salary
-  field_type: dimension
-  type: number
-  required_access_grants:
-  - exec_only
-  sql: ${TABLE}."SALARY"
+  - name: salary
+    field_type: dimension
+    type: number
+    required_access_grants:
+      - exec_only
+    sql: ${TABLE}."SALARY"
 
-- name: role
-  field_type: dimension
-  type: string
-  label: Role
-  sql: ${TABLE}."ROLE"
-  searchable: false
+  - name: role
+    field_type: dimension
+    type: string
+    label: Role
+    sql: ${TABLE}."ROLE"
+    searchable: false
