Zenlytic data model update

--- a/views/supermarket_sales.yml
+++ b/views/supermarket_sales.yml
@@ -1,5 +1,5 @@
-name: supermarket_sales
 type: view
+name: supermarket_sales
 model_name: zenlytic_managed
 sql_table_name: supermarket_sales
 default_date: Date
@@ -10,81 +10,101 @@ fields:
     sql: ${TABLE}."INVOICE_ID"
     searchable: true
     primary_key: true
+
   - name: Branch
     field_type: dimension
     type: string
     sql: ${TABLE}."BRANCH"
     searchable: true
+
   - name: City
     field_type: dimension
     type: string
     sql: ${TABLE}."CITY"
     searchable: true
+
   - name: Customer_type
     field_type: dimension
     type: string
     sql: ${TABLE}."CUSTOMER_TYPE"
     searchable: true
+
   - name: Gender
     field_type: dimension
     type: string
     sql: ${TABLE}."GENDER"
     searchable: true
+
   - name: Product_line
     field_type: dimension
     type: string
     sql: ${TABLE}."PRODUCT_LINE"
     searchable: true
+
   - name: Unit_price
     field_type: dimension
     type: number
     sql: ${TABLE}."UNIT_PRICE"
     searchable: true
+
   - name: Quantity
     field_type: dimension
     type: number
     sql: ${TABLE}."QUANTITY"
     searchable: true
+
   - name: Tax_5Percent
     field_type: dimension
     type: number
     sql: ${TABLE}."TAX_5PERCENT"
     searchable: true
+
   - name: Total
     field_type: dimension
     type: number
     sql: ${TABLE}."TOTAL"
     searchable: true
+
   - name: Payment
     field_type: dimension
     type: string
     sql: ${TABLE}."PAYMENT"
     searchable: true
+
   - name: cogs
     field_type: dimension
     type: number
     sql: ${TABLE}."COGS"
     searchable: true
+
   - name: gross_margin_percentage
     field_type: dimension
     type: number
     sql: ${TABLE}."GROSS_MARGIN_PERCENTAGE"
     searchable: true
+
   - name: gross_income
     field_type: dimension
     type: number
     sql: ${TABLE}."GROSS_INCOME"
     searchable: true
+
   - name: Rating
     field_type: dimension
     type: number
     sql: ${TABLE}."RATING"
     searchable: true
+
   - name: Date
     field_type: dimension_group
     type: time
+    description: ''
+    datatype: date
+    hidden: false
+    label: Invoice Date
     sql: ${TABLE}."DATE"
-    timeframes: &ref_0
+    synonyms: []
+    timeframes:
       - date
       - week
       - month
@@ -93,8 +113,17 @@ fields:
       - day_of_year
       - week_of_year
       - month_of_year
+
   - name: Time
     field_type: dimension_group
     type: time
     sql: ${TABLE}."TIME"
-    timeframes: *ref_0
+    timeframes:
+      - date
+      - week
+      - month
+      - quarter
+      - year
+      - day_of_year
+      - week_of_year
+      - month_of_year
