--- a/views/people_pulse_product_view.yml
+++ b/views/people_pulse_product_view.yml
@@ -1,27 +1,28 @@
 version: 1
 type: view
 name: product
+description: Product information
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_PRODUCT
 identifiers:
-- name: product_id
-  type: primary
-  sql: ${product_id}
+  - name: product_id
+    type: primary
+    sql: ${product_id}
 fields:
-- name: product_id
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."PRODUCT_ID"
-  searchable: true
+  - name: product_id
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."PRODUCT_ID"
+    searchable: true
 
-- name: product_type
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."PRODUCT_TYPE"
-  searchable: true
+  - name: product_type
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."PRODUCT_TYPE"
+    searchable: true
 
-- name: product_name
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."PRODUCT_NAME"
-  searchable: true
+  - name: product_name
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."PRODUCT_NAME"
+    searchable: true
