--- a/views/people_pulse_marketing_spend_view.yml
+++ b/views/people_pulse_marketing_spend_view.yml
@@ -1,140 +1,99 @@
 version: 1
 type: view
-name: marketing_spend
+name: Marketing_spend
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_MARKETING_SPEND
 default_date: date
 identifiers: []
 fields:
-- name: engagement
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."ENGAGEMENT"
+  - name: engagement
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."ENGAGEMENT"
 
-- name: source
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."SOURCE"
-  searchable: true
+  - name: source
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."SOURCE"
+    searchable: true
 
-- name: spend
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."SPEND"
+  - name: spend
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."SPEND"
 
-- name: channel
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."CHANNEL"
-  searchable: true
+  - name: channel
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."CHANNEL"
+    searchable: true
 
-- name: reach
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."REACH"
+  - name: reach
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."REACH"
 
-- name: conversion_rate
-  field_type: dimension
-  type: number
-  sql: ${TABLE}."CONVERSION_RATE"
-  hidden: true
+  - name: conversion_rate
+    field_type: dimension
+    type: number
+    sql: ${TABLE}."CONVERSION_RATE"
+    hidden: true
 
-- name: campaign
-  field_type: dimension
-  type: string
-  sql: ${TABLE}."CAMPAIGN"
-  searchable: true
+  - name: campaign
+    field_type: dimension
+    type: string
+    sql: ${TABLE}."CAMPAIGN"
+    searchable: true
 
-- name: date
-  field_type: dimension_group
-  type: time
-  datatype: timestamp
-  timeframes:
-  - raw
-  - date
-  - day_of_year
-  - week
-  - week_of_year
-  - month
-  - month_of_year
-  - quarter
-  - fiscal_month
-  - fiscal_quarter
-  - fiscal_quarter_of_year
-  - fiscal_year
-  - year
-  sql: ${TABLE}."DATE"
+  - name: date
+    field_type: dimension_group
+    type: time
+    datatype: timestamp
+    timeframes:
+      - raw
+      - date
+      - day_of_year
+      - week
+      - week_of_year
+      - month
+      - month_of_year
+      - quarter
+      - fiscal_month
+      - fiscal_quarter
+      - fiscal_quarter_of_year
+      - fiscal_year
+      - year
+    sql: ${TABLE}."DATE"
 
-- name: number_of_campaigns_run
-  field_type: measure
-  type: count_distinct
-  description: The total number of unique camaigns run.
-  sql: ${campaign}
+  - name: number_of_campaigns_run
+    field_type: measure
+    type: count_distinct
+    description: The total number of unique camaigns run.
+    sql: ${campaign}
 
-- name: total_engagement
-  field_type: measure
-  type: sum
-  description: The total sum of engagement across all marketing channels.
-  sql: ${engagement}
+  - name: total_engagement
+    field_type: measure
+    type: sum
+    description: The total sum of engagement across all marketing channels.
+    sql: ${engagement}
 
-- name: total_spend
-  field_type: measure
-  type: sum
-  description: The total sum of marketing spend.
-  sql: ${spend}
-  value_format_name: usd
+  - name: total_spend
+    field_type: measure
+    type: sum
+    description: The total sum of marketing spend.
+    sql: ${spend}
+    value_format_name: usd
 
-- name: total_reach
-  field_type: measure
-  type: sum
-  description: The total sum of reach across all marketing channels.
-  sql: ${reach}
+  - name: total_reach
+    field_type: measure
+    type: sum
+    description: The total sum of reach across all marketing channels.
+    sql: ${reach}
 
-- name: spend_to_reach_ratio
-  field_type: measure
-  type: number
-  description: The ratio of spend to reach, indicating how much is spent for each
-    unit of reach.
-  sql: NULLIF(${total_spend}, 0) / NULLIF(${total_reach}, 0)
-
-# To help you get started with defining fields, we've included a quick guide which you can delete at any time.
-# The following keys are required for all fields. All the fields above have been created based on the columns
-# in your table.
-
-# - name: (Required) Name of the field. This is used to reference the field in the data model.
-#   field_type: The type of field. This can be 'dimension', 'measure', or 'dimension_group'.
-#   type: This is the data type for a field.
-#         For dimensions, this can be: string, yesno, tier, number
-#         For measures, this is an aggregation type: number, sum, average, count, count_distinct
-#         For dimension groups this can be: time, duration
-#   sql: (Required) This is the SQL expression for the field. You can reference other fields in the table by
-#        using the `name` of the field. For example, if you have a field with name: 'revenue' in the view
-#        'orders', you can reference it as: ${orders.revenue}.
-#        For more information, see https://docs.zenlytic.com/docs/data_modeling/
-#
-
-# The following keys are optional but useful for providing additional context to the field in the UI and Zoe.
-#
-#   label: The is the user-facing label for the field, displayed in the UI and used by Zoe in chat.
-#          It's different from the `name` field, which is used for referencing the field in the data model.
-#
-#   description: This is used to provide context to users about the field.
-#
-#   searchable: This allows Zenlytic to index the categories and allows Zoe to properly use filters.
-#               For example, if you have a field called 'state' and you want to be able to filter
-#               on different states, you would set this to 'yes'.
-#
-#   zoe_description: This is used to provide context to Zoe about the field.
-#                    When this is not provided, Zoe will use the description field.
-#
-#   hidden: This is used to hide the field from both the UI and Zoe. By default, this is set to 'no'.
-#
-#   value_format_name: This is the format to use when displaying the field. Follow this link to see the
-#                      available formats. https://docs.zenlytic.com/docs/data_modeling/formatting
-#
-#   synonyms: This is a list of strings that act as synonyms for the field label.
-#
-#   filters: This is a list of filters that can be applied to the field.
-#
-# For a comprehensive list of options that can be specified for a field, or for more detailed information,
-# please visit: https://docs.zenlytic.com/docs/data_modeling/data_modeling
+  - name: spend_to_reach_ratio
+    field_type: measure
+    type: number
+    description: >-
+      The ratio of spend to reach, indicating how much is spent for each unit of
+      reach.
+    sql: NULLIF(${total_spend}, 0) / NULLIF(${total_reach}, 0)
