--- a/views/people_pulse_marketing_spend_view.yml
+++ b/views/people_pulse_marketing_spend_view.yml
@@ -1,6 +1,6 @@
 version: 1
 type: view
-name: Marketing_spend
+name: marketing_spend
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_MARKETING_SPEND
 default_date: date
