Zenlytic data model update

--- a/views/people_pulse_account_view.yml
+++ b/views/people_pulse_account_view.yml
@@ -1,7 +1,7 @@
 version: 1
 type: view
 name: account
-model_name: peoplepulse_model
+model_name: womp_womp
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_ACCOUNT
 default_date: contract_start_date
 identifiers:
