--- a/views/people_pulse_session_view.yml
+++ b/views/people_pulse_session_view.yml
@@ -2,7 +2,7 @@ version: 1
 type: view
 name: web_session
 description: The sessions are just for the marketing site, so we don't have information
-  on logged in users of the product
+  on logged in users of the product.
 model_name: peoplepulse_model
 sql_table_name: DEMO.DEMO_PROD_PEOPLE_PULSE.PEOPLE_PULSE_SESSION
 default_date: timestamp
