Zenlytic data model update

--- a/topics/candy_shop.yml
+++ b/topics/candy_shop.yml
@@ -2,5 +2,10 @@ base_view: candy_shop_suppliers
 model_name: zenlytic_managed
 label: Candy Shop
 description: ''
-views: {}
+views:
+  candy_shop_customers:
+    join:
+      join_type: left_outer
+      relationship: many_to_one
+      sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_customers.customer_id}
 type: topic
