--- a/topics/candy_shop.yml
+++ b/topics/candy_shop.yml
@@ -8,4 +8,10 @@ views:
       join_type: left_outer
       relationship: many_to_one
       sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_customers.customer_id}
+  candy_shop_order_items:
+    join:
+      join_type: left_outer
+      relationship: many_to_one
+      sql_on: >-
+        ${candy_shop_suppliers.supplier_id}=${candy_shop_order_items.order_item_id}
 type: topic
