--- a/topics/candy_shop.yml
+++ b/topics/candy_shop.yml
@@ -19,4 +19,9 @@ views:
       join_type: left_outer
       relationship: many_to_one
       sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_orders.order_id}
+  candy_shop_products:
+    join:
+      join_type: left_outer
+      relationship: many_to_one
+      sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_products.product_id}
 type: topic
