Zenlytic data model update

--- a/topics/candy_shop.yml
+++ b/topics/candy_shop.yml
@@ -1,4 +1,4 @@
-base_view: candy_shop_suppliers
+base_view: candy_shop_orders
 model_name: zenlytic_managed
 label: Candy Shop
 description: ''
@@ -7,21 +7,20 @@ views:
     join:
       join_type: left_outer
       relationship: many_to_one
-      sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_customers.customer_id}
+      sql_on: ${candy_shop_orders.customer_id}=${candy_shop_customers.customer_id}
   candy_shop_order_items:
     join:
       join_type: left_outer
-      relationship: many_to_one
-      sql_on: >-
-        ${candy_shop_suppliers.supplier_id}=${candy_shop_order_items.order_item_id}
-  candy_shop_orders:
-    join:
-      join_type: left_outer
-      relationship: many_to_one
-      sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_orders.order_id}
+      relationship: one_to_many
+      sql_on: ${candy_shop_orders.order_id}=${candy_shop_order_items.order_id}
   candy_shop_products:
     join:
       join_type: left_outer
       relationship: many_to_one
-      sql_on: ${candy_shop_suppliers.supplier_id}=${candy_shop_products.product_id}
+      sql_on: ${candy_shop_order_items.product_id}=${candy_shop_products.product_id}
+  candy_shop_suppliers:
+    join:
+      join_type: left_outer
+      relationship: many_to_one
+      sql_on: ${candy_shop_products.supplier_id}=${candy_shop_suppliers.supplier_id}
 type: topic
